@@ -126,7 +126,6 @@ import java.io.File;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -147,7 +146,6 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static java.util.Collections.singletonList;
 import static java.util.function.Function.identity;
 import static org.apache.kafka.clients.admin.AlterConfigOp.OpType.SET;
 import static org.apache.kafka.common.config.ConfigResource.Type.BROKER;
@@ -194,7 +192,7 @@ public class QuorumControllerTest {
                 setFeatures(brokerFeaturesPlusFeatureVersions(MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestTesting(),
                     Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_1.featureLevel()))).
                 setBrokerId(0).
-                setLogDirs(Collections.singletonList(Uuid.fromString("iiaQjkRPQcuMULNII0MUeA"))).
+                setLogDirs(List.of(Uuid.fromString("iiaQjkRPQcuMULNII0MUeA"))).
                 setClusterId(logEnv.clusterId())).get();
             testConfigurationOperations(controlEnv.activeController());
 
@@ -203,20 +201,19 @@ public class QuorumControllerTest {
     }
 
     private void testConfigurationOperations(QuorumController controller) throws Throwable {
-        assertEquals(Collections.singletonMap(BROKER0, ApiError.NONE),
-            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.singletonMap("baz", entry(SET, "123"))), true).get());
-        assertEquals(Collections.singletonMap(BROKER0,
-            new ResultOrError<>(Collections.emptyMap())),
-            controller.describeConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.emptyList())).get());
-        assertEquals(Collections.singletonMap(BROKER0, ApiError.NONE),
-            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.singletonMap("baz", entry(SET, "123"))), false).get());
-        assertEquals(Collections.singletonMap(BROKER0, new ResultOrError<>(Collections.
-                singletonMap("baz", "123"))),
-            controller.describeConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.emptyList())).get());
+        assertEquals(Map.of(BROKER0, ApiError.NONE),
+            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, Map.of("baz", entry(SET, "123"))), true).get());
+        assertEquals(Map.of(BROKER0,
+            new ResultOrError<>(Map.of())),
+            controller.describeConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, List.of())).get());
+        assertEquals(Map.of(BROKER0, ApiError.NONE),
+            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, Map.of("baz", entry(SET, "123"))), false).get());
+        assertEquals(Map.of(BROKER0, new ResultOrError<>(Map.of("baz", "123"))),
+            controller.describeConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, List.of())).get());
     }
 
     /**
@@ -236,7 +233,7 @@ public class QuorumControllerTest {
                     setFeatures(brokerFeaturesPlusFeatureVersions(MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestTesting(),
                         Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_1.featureLevel()))).
                     setBrokerId(0).
-                    setLogDirs(Collections.singletonList(Uuid.fromString("sTbzRAMnTpahIyIPNjiLhw"))).
+                    setLogDirs(List.of(Uuid.fromString("sTbzRAMnTpahIyIPNjiLhw"))).
                     setClusterId(logEnv.clusterId())).get();
             testDelayedConfigurationOperations(logEnv, controlEnv.activeController());
 
@@ -250,22 +247,22 @@ public class QuorumControllerTest {
     ) throws Throwable {
         logEnv.logManagers().forEach(m -> m.setMaxReadOffset(1L));
         CompletableFuture<Map<ConfigResource, ApiError>> future1 =
-            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.singletonMap("baz", entry(SET, "123"))), false);
+            controller.incrementalAlterConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, Map.of("baz", entry(SET, "123"))), false);
         assertFalse(future1.isDone());
-        assertEquals(Collections.singletonMap(BROKER0,
-            new ResultOrError<>(Collections.emptyMap())),
-            controller.describeConfigs(ANONYMOUS_CONTEXT, Collections.singletonMap(
-                BROKER0, Collections.emptyList())).get());
+        assertEquals(Map.of(BROKER0,
+            new ResultOrError<>(Map.of())),
+            controller.describeConfigs(ANONYMOUS_CONTEXT, Map.of(
+                BROKER0, List.of())).get());
         logEnv.logManagers().forEach(m -> m.setMaxReadOffset(8L));
-        assertEquals(Collections.singletonMap(BROKER0, ApiError.NONE), future1.get());
+        assertEquals(Map.of(BROKER0, ApiError.NONE), future1.get());
     }
 
     @Test
     public void testFenceMultipleBrokers() throws Throwable {
-        List<Integer> allBrokers = Arrays.asList(1, 2, 3, 4, 5);
-        List<Integer> brokersToKeepUnfenced = Arrays.asList(1);
-        List<Integer> brokersToFence = Arrays.asList(2, 3, 4, 5);
+        List<Integer> allBrokers = List.of(1, 2, 3, 4, 5);
+        List<Integer> brokersToKeepUnfenced = List.of(1);
+        List<Integer> brokersToFence = List.of(2, 3, 4, 5);
         short replicationFactor = (short) allBrokers.size();
         short numberOfPartitions = (short) allBrokers.size();
         long sessionTimeoutMillis = 1000;
@@ -303,12 +300,12 @@ public class QuorumControllerTest {
             // Unfence all brokers and create a topic foo
             sendBrokerHeartbeatToUnfenceBrokers(active, allBrokers, brokerEpochs);
             CreateTopicsRequestData createTopicsRequestData = new CreateTopicsRequestData().setTopics(
-                new CreatableTopicCollection(Collections.singleton(
+                new CreatableTopicCollection(Set.of(
                     new CreatableTopic().setName("foo").setNumPartitions(numberOfPartitions).
                         setReplicationFactor(replicationFactor)).iterator()));
             CreateTopicsResponseData createTopicsResponseData = active.createTopics(
                 ANONYMOUS_CONTEXT, createTopicsRequestData,
-                Collections.singleton("foo")).get();
+                Set.of("foo")).get();
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("foo").errorCode()));
             Uuid topicIdFoo = createTopicsResponseData.topics().find("foo").topicId();
 
@@ -362,7 +359,7 @@ public class QuorumControllerTest {
             QuorumControllerTestEnv controlEnv = new QuorumControllerTestEnv.Builder(logEnv).
                 setSessionTimeoutMillis(OptionalLong.of(sessionTimeoutMillis)).
                 setBootstrapMetadata(BootstrapMetadata.fromRecords(
-                    Arrays.asList(
+                    List.of(
                         new ApiMessageAndVersion(new FeatureLevelRecord().
                             setName(MetadataVersion.FEATURE_NAME).
                             setFeatureLevel(MetadataVersion.IBP_4_0_IV1.featureLevel()), (short) 0),
@@ -382,7 +379,7 @@ public class QuorumControllerTest {
     @Flaky("KAFKA-18845")
     @Test
     public void testUncleanShutdownBrokerElrEnabled() throws Throwable {
-        List<Integer> allBrokers = Arrays.asList(1, 2, 3);
+        List<Integer> allBrokers = List.of(1, 2, 3);
         short replicationFactor = (short) allBrokers.size();
         long sessionTimeoutMillis = 500;
 
@@ -409,7 +406,7 @@ public class QuorumControllerTest {
                         setClusterId(active.clusterId()).
                         setFeatures(features).
                         setIncarnationId(Uuid.randomUuid()).
-                        setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                        setLogDirs(List.of(Uuid.randomUuid())).
                         setListeners(listeners));
                 brokerEpochs.put(brokerId, reply.get().epoch());
             }
@@ -422,12 +419,12 @@ public class QuorumControllerTest {
             // Unfence all brokers and create a topic foo
             sendBrokerHeartbeatToUnfenceBrokers(active, allBrokers, brokerEpochs);
             CreateTopicsRequestData createTopicsRequestData = new CreateTopicsRequestData().setTopics(
-                new CreatableTopicCollection(Collections.singleton(
+                new CreatableTopicCollection(Set.of(
                     new CreatableTopic().setName("foo").setNumPartitions(1).
                         setReplicationFactor(replicationFactor)).iterator()));
             CreateTopicsResponseData createTopicsResponseData = active.createTopics(
                 ANONYMOUS_CONTEXT, createTopicsRequestData,
-                Collections.singleton("foo")).get();
+                Set.of("foo")).get();
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("foo").errorCode()));
             Uuid topicIdFoo = createTopicsResponseData.topics().find("foo").topicId();
             ConfigRecord configRecord = new ConfigRecord()
@@ -435,7 +432,7 @@ public class QuorumControllerTest {
                 .setResourceName("foo")
                 .setName(org.apache.kafka.common.config.TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)
                 .setValue("2");
-            RecordTestUtils.replayAll(active.configurationControl(), singletonList(new ApiMessageAndVersion(configRecord, (short) 0)));
+            RecordTestUtils.replayAll(active.configurationControl(), List.of(new ApiMessageAndVersion(configRecord, (short) 0)));
 
             // Fence all the brokers
             TestUtils.waitForCondition(() -> {
@@ -477,7 +474,7 @@ public class QuorumControllerTest {
                     setClusterId(active.clusterId()).
                     setFeatures(features).
                     setIncarnationId(Uuid.randomUuid()).
-                    setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                    setLogDirs(List.of(Uuid.randomUuid())).
                     setListeners(listeners));
             brokerEpochs.put(brokerToUncleanShutdown, reply.get().epoch());
             partition = active.replicationControl().getPartition(topicIdFoo, 0);
@@ -493,11 +490,11 @@ public class QuorumControllerTest {
                     setFeatures(features).
                     setIncarnationId(Uuid.randomUuid()).
                     setPreviousBrokerEpoch(brokerEpochs.get(brokerToBeTheLeader)).
-                    setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                    setLogDirs(List.of(Uuid.randomUuid())).
                     setListeners(listeners));
 
             // Unfence the last one in the ELR, it should be elected.
-            sendBrokerHeartbeatToUnfenceBrokers(active, singletonList(brokerToBeTheLeader), brokerEpochs);
+            sendBrokerHeartbeatToUnfenceBrokers(active, List.of(brokerToBeTheLeader), brokerEpochs);
             TestUtils.waitForCondition(() -> active.clusterControl().isUnfenced(brokerToBeTheLeader), sessionTimeoutMillis * 3,
                 "Broker should be unfenced."
             );
@@ -512,7 +509,7 @@ public class QuorumControllerTest {
 
     @Test
     public void testUncleanShutdownElrDisabled() throws Exception {
-        List<Integer> allBrokers = Arrays.asList(1, 2, 3);
+        List<Integer> allBrokers = List.of(1, 2, 3);
         short replicationFactor = (short) allBrokers.size();
         long sessionTimeoutMillis = 500;
 
@@ -541,7 +538,7 @@ public class QuorumControllerTest {
                         setClusterId(active.clusterId()).
                         setFeatures(features).
                         setIncarnationId(Uuid.randomUuid()).
-                        setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                        setLogDirs(List.of(Uuid.randomUuid())).
                         setListeners(listeners));
                 brokerEpochs.put(brokerId, reply.get().epoch());
             }
@@ -554,12 +551,12 @@ public class QuorumControllerTest {
             // Unfence all brokers and create a topic foo
             sendBrokerHeartbeatToUnfenceBrokers(active, allBrokers, brokerEpochs);
             CreateTopicsRequestData createTopicsRequestData = new CreateTopicsRequestData().setTopics(
-                new CreatableTopicCollection(Collections.singleton(
+                new CreatableTopicCollection(Set.of(
                     new CreatableTopic().setName("foo").setNumPartitions(1).
                         setReplicationFactor(replicationFactor)).iterator()));
             CreateTopicsResponseData createTopicsResponseData = active.createTopics(
                 ANONYMOUS_CONTEXT, createTopicsRequestData,
-                Collections.singleton("foo")).get();
+                Set.of("foo")).get();
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("foo").errorCode()));
             Uuid topicIdFoo = createTopicsResponseData.topics().find("foo").topicId();
 
@@ -584,7 +581,7 @@ public class QuorumControllerTest {
                         setClusterId(active.clusterId()).
                         setFeatures(features).
                         setIncarnationId(Uuid.randomUuid()).
-                        setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                        setLogDirs(List.of(Uuid.randomUuid())).
                         setListeners(listeners)).get();
                 partition = active.replicationControl().getPartition(topicIdFoo, 0);
                 // leader should always change, leader epoch should always be incremented
@@ -606,9 +603,9 @@ public class QuorumControllerTest {
 
     @Test
     public void testMinIsrUpdateWithElr() throws Throwable {
-        List<Integer> allBrokers = Arrays.asList(1, 2, 3);
-        List<Integer> brokersToKeepUnfenced = Arrays.asList(1);
-        List<Integer> brokersToFence = Arrays.asList(2, 3);
+        List<Integer> allBrokers = List.of(1, 2, 3);
+        List<Integer> brokersToKeepUnfenced = List.of(1);
+        List<Integer> brokersToFence = List.of(2, 3);
         short replicationFactor = (short) allBrokers.size();
         long sessionTimeoutMillis = 300;
 
@@ -633,7 +630,7 @@ public class QuorumControllerTest {
                         setFeatures(brokerFeaturesPlusFeatureVersions(MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestTesting(),
                             Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_1.featureLevel()))).
                         setIncarnationId(Uuid.randomUuid()).
-                        setLogDirs(Collections.singletonList(Uuid.randomUuid())).
+                        setLogDirs(List.of(Uuid.randomUuid())).
                         setListeners(listeners));
                 brokerEpochs.put(brokerId, reply.get().epoch());
             }
@@ -647,7 +644,7 @@ public class QuorumControllerTest {
             // Unfence all brokers and create a topic foo (min ISR 2)
             sendBrokerHeartbeatToUnfenceBrokers(active, allBrokers, brokerEpochs);
             CreateTopicsRequestData createTopicsRequestData = new CreateTopicsRequestData().setTopics(
-                new CreatableTopicCollection(Arrays.asList(
+                new CreatableTopicCollection(List.of(
                     new CreatableTopic().setName("foo").setNumPartitions(1).
                         setReplicationFactor(replicationFactor),
                     new CreatableTopic().setName("bar").setNumPartitions(1).
@@ -655,7 +652,7 @@ public class QuorumControllerTest {
                 ).iterator()));
             CreateTopicsResponseData createTopicsResponseData = active.createTopics(
                 ANONYMOUS_CONTEXT, createTopicsRequestData,
-                new HashSet<>(Arrays.asList("foo", "bar"))).get();
+                new HashSet<>(List.of("foo", "bar"))).get();
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("foo").errorCode()));
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("bar").errorCode()));
             Uuid topicIdFoo = createTopicsResponseData.topics().find("foo").topicId();
@@ -665,7 +662,7 @@ public class QuorumControllerTest {
                 .setResourceName("")
                 .setName(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)
                 .setValue("2");
-            RecordTestUtils.replayAll(active.configurationControl(), singletonList(new ApiMessageAndVersion(configRecord, (short) 0)));
+            RecordTestUtils.replayAll(active.configurationControl(), List.of(new ApiMessageAndVersion(configRecord, (short) 0)));
 
             // Fence brokers
             TestUtils.waitForCondition(() -> {
@@ -706,8 +703,8 @@ public class QuorumControllerTest {
                     entry(new ConfigResource(TOPIC, "foo"), toMap(entry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, entry(SET, "1"))))),
                 true);
             assertEquals(2, result.records().size(), result.records().toString());
-            RecordTestUtils.replayAll(active.configurationControl(), singletonList(result.records().get(0)));
-            RecordTestUtils.replayAll(active.replicationControl(), singletonList(result.records().get(1)));
+            RecordTestUtils.replayAll(active.configurationControl(), List.of(result.records().get(0)));
+            RecordTestUtils.replayAll(active.replicationControl(), List.of(result.records().get(1)));
 
             partition = active.replicationControl().getPartition(topicIdFoo, 0);
             assertEquals(0, partition.elr.length, partition.toString());
@@ -722,8 +719,8 @@ public class QuorumControllerTest {
                     entry(new ConfigResource(BROKER, ""), toMap(entry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, entry(SET, "1"))))),
                 true);
             assertEquals(2, result.records().size(), result.records().toString());
-            RecordTestUtils.replayAll(active.configurationControl(), singletonList(result.records().get(0)));
-            RecordTestUtils.replayAll(active.replicationControl(), singletonList(result.records().get(1)));
+            RecordTestUtils.replayAll(active.configurationControl(), List.of(result.records().get(0)));
+            RecordTestUtils.replayAll(active.replicationControl(), List.of(result.records().get(1)));
 
             partition = active.replicationControl().getPartition(topicIdBar, 0);
             assertEquals(0, partition.elr.length, partition.toString());
@@ -733,9 +730,9 @@ public class QuorumControllerTest {
 
     @Test
     public void testBalancePartitionLeaders() throws Throwable {
-        List<Integer> allBrokers = Arrays.asList(1, 2, 3);
-        List<Integer> brokersToKeepUnfenced = Arrays.asList(1, 2);
-        List<Integer> brokersToFence = Collections.singletonList(3);
+        List<Integer> allBrokers = List.of(1, 2, 3);
+        List<Integer> brokersToKeepUnfenced = List.of(1, 2);
+        List<Integer> brokersToFence = List.of(3);
         short replicationFactor = (short) allBrokers.size();
         short numberOfPartitions = (short) allBrokers.size();
         long sessionTimeoutMillis = 2000;
@@ -775,11 +772,11 @@ public class QuorumControllerTest {
             // Unfence all brokers and create a topic foo
             sendBrokerHeartbeatToUnfenceBrokers(active, allBrokers, brokerEpochs);
             CreateTopicsRequestData createTopicsRequestData = new CreateTopicsRequestData().setTopics(
-                new CreatableTopicCollection(Collections.singleton(
+                new CreatableTopicCollection(Set.of(
                     new CreatableTopic().setName("foo").setNumPartitions(numberOfPartitions).
                         setReplicationFactor(replicationFactor)).iterator()));
             CreateTopicsResponseData createTopicsResponseData = active.createTopics(
-                ANONYMOUS_CONTEXT, createTopicsRequestData, Collections.singleton("foo")).get();
+                ANONYMOUS_CONTEXT, createTopicsRequestData, Set.of("foo")).get();
             assertEquals(Errors.NONE, Errors.forCode(createTopicsResponseData.topics().find("foo").errorCode()));
             Uuid topicIdFoo = createTopicsResponseData.topics().find("foo").topicId();
 
@@ -838,7 +835,7 @@ public class QuorumControllerTest {
                 .setPartitionIndex(imbalancedPartitionId)
                 .setLeaderEpoch(partitionRegistration.leaderEpoch)
                 .setPartitionEpoch(partitionRegistration.partitionEpoch)
-                .setNewIsrWithEpochs(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2, 3)));
+                .setNewIsrWithEpochs(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2, 3)));
 
             AlterPartitionRequestData.TopicData topicData = new AlterPartitionRequestData.TopicData()
                 .setTopicId(impalancedTp.topicId());
@@ -954,7 +951,7 @@ public class QuorumControllerTest {
                 setClusterId(active.clusterId()).
                 setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwBA")).
                 setFeatures(brokerFeatures).
-                setLogDirs(Collections.singletonList(Uuid.fromString("vBpaRsZVSaGsQT53wtYGtg"))).
+                setLogDirs(List.of(Uuid.fromString("vBpaRsZVSaGsQT53wtYGtg"))).
                 setListeners(listeners);
 
             if (brokerMaxSupportedKraftVersion < finalizedKraftVersion) {
@@ -995,28 +992,28 @@ public class QuorumControllerTest {
                     setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwBA")).
                     setFeatures(brokerFeaturesPlusFeatureVersions(MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestTesting(),
                         Map.of(EligibleLeaderReplicasVersion.FEATURE_NAME, EligibleLeaderReplicasVersion.ELRV_1.featureLevel()))).
-                    setLogDirs(Collections.singletonList(Uuid.fromString("vBpaRsZVSaGsQT53wtYGtg"))).
+                    setLogDirs(List.of(Uuid.fromString("vBpaRsZVSaGsQT53wtYGtg"))).
                     setListeners(listeners));
             assertEquals(6L, reply.get().epoch());
             CreateTopicsRequestData createTopicsRequestData =
                 new CreateTopicsRequestData().setTopics(
-                    new CreatableTopicCollection(Collections.singleton(
+                    new CreatableTopicCollection(Set.of(
                         new CreatableTopic().setName("foo").setNumPartitions(1).
                             setReplicationFactor((short) 1)).iterator()));
             assertEquals(Errors.INVALID_REPLICATION_FACTOR.code(), active.createTopics(
                 ANONYMOUS_CONTEXT,
-                createTopicsRequestData, Collections.singleton("foo")).get().
+                createTopicsRequestData, Set.of("foo")).get().
                     topics().find("foo").errorCode());
             assertEquals("Unable to replicate the partition 1 time(s): All brokers " +
                 "are currently fenced.", active.createTopics(ANONYMOUS_CONTEXT,
-                    createTopicsRequestData, Collections.singleton("foo")).
+                    createTopicsRequestData, Set.of("foo")).
                         get().topics().find("foo").errorMessage());
             assertEquals(new BrokerHeartbeatReply(true, false, false, false),
                 active.processBrokerHeartbeat(ANONYMOUS_CONTEXT, new BrokerHeartbeatRequestData().
                         setWantFence(false).setBrokerEpoch(6L).setBrokerId(0).
                         setCurrentMetadataOffset(100000L)).get());
             assertEquals(Errors.NONE.code(), active.createTopics(ANONYMOUS_CONTEXT,
-                createTopicsRequestData, Collections.singleton("foo")).
+                createTopicsRequestData, Set.of("foo")).
                     get().topics().find("foo").errorCode());
             CompletableFuture<TopicIdPartition> topicPartitionFuture = active.appendReadEvent(
                 "debugGetPartition", OptionalLong.empty(), () -> {
@@ -1072,7 +1069,7 @@ public class QuorumControllerTest {
                         setIncarnationId(new Uuid(3465346L, i)).
                         setZkMigrationReady(false).
                         setListeners(new ControllerRegistrationRequestData.ListenerCollection(
-                            singletonList(
+                            List.of(
                                 new ControllerRegistrationRequestData.Listener().
                                     setName("CONTROLLER").
                                     setHost("localhost").
@@ -1081,7 +1078,7 @@ public class QuorumControllerTest {
                                 ).iterator()
                         )).
                         setFeatures(new ControllerRegistrationRequestData.FeatureCollection(
-                            singletonList(
+                            List.of(
                                 new ControllerRegistrationRequestData.Feature().
                                     setName(MetadataVersion.FEATURE_NAME).
                                     setMinSupportedVersion(MetadataVersion.MINIMUM_VERSION.featureLevel()).
@@ -1097,7 +1094,7 @@ public class QuorumControllerTest {
                         setClusterId(active.clusterId()).
                         setFeatures(brokerFeatures(MetadataVersion.MINIMUM_VERSION, MetadataVersion.IBP_3_7_IV0)).
                         setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwB" + i)).
-                        setListeners(new ListenerCollection(singletonList(new Listener().
+                        setListeners(new ListenerCollection(List.of(new Listener().
                             setName("PLAINTEXT").setHost("localhost").
                             setPort(9092 + i)).iterator()))).get();
                 brokerEpochs.put(i, reply.epoch());
@@ -1110,18 +1107,18 @@ public class QuorumControllerTest {
             }
             CreateTopicsResponseData fooData = active.createTopics(ANONYMOUS_CONTEXT,
                 new CreateTopicsRequestData().setTopics(
-                    new CreatableTopicCollection(Collections.singleton(
+                    new CreatableTopicCollection(Set.of(
                         new CreatableTopic().setName("foo").setNumPartitions(-1).
                             setReplicationFactor((short) -1).
                             setAssignments(new CreatableReplicaAssignmentCollection(
-                                Arrays.asList(new CreatableReplicaAssignment().
+                                List.of(new CreatableReplicaAssignment().
                                     setPartitionIndex(0).
-                                    setBrokerIds(Arrays.asList(0, 1, 2)),
+                                    setBrokerIds(List.of(0, 1, 2)),
                                     new CreatableReplicaAssignment().
                                         setPartitionIndex(1).
-                                        setBrokerIds(Arrays.asList(1, 2, 0))).
+                                        setBrokerIds(List.of(1, 2, 0))).
                                             iterator()))).iterator())),
-                Collections.singleton("foo")).get();
+                Set.of("foo")).get();
             fooId = fooData.topics().find("foo").topicId();
             active.allocateProducerIds(ANONYMOUS_CONTEXT,
                 new AllocateProducerIdsRequestData().setBrokerId(0).setBrokerEpoch(brokerEpochs.get(0))).get();
@@ -1133,7 +1130,7 @@ public class QuorumControllerTest {
     }
 
     private List<ApiMessageAndVersion> generateTestRecords(Uuid fooId, Map<Integer, Long> brokerEpochs) {
-        return Arrays.asList(
+        return List.of(
             new ApiMessageAndVersion(new BeginTransactionRecord().
                 setName("Bootstrap records"), (short) 0),
             new ApiMessageAndVersion(new FeatureLevelRecord().
@@ -1144,14 +1141,14 @@ public class QuorumControllerTest {
                 setControllerId(0).
                 setIncarnationId(Uuid.fromString("AAAAAAA04IIAAAAAAAAAAA")).
                 setEndPoints(new RegisterControllerRecord.ControllerEndpointCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerEndpoint().
                             setName("CONTROLLER").
                             setHost("localhost").
                             setPort(8000).
                             setSecurityProtocol(SecurityProtocol.PLAINTEXT.id)).iterator())).
                 setFeatures(new RegisterControllerRecord.ControllerFeatureCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerFeature().
                             setName(MetadataVersion.FEATURE_NAME).
                             setMinSupportedVersion(MetadataVersion.MINIMUM_VERSION.featureLevel()).
@@ -1161,14 +1158,14 @@ public class QuorumControllerTest {
                 setControllerId(1).
                 setIncarnationId(Uuid.fromString("AAAAAAA04IIAAAAAAAAAAQ")).
                 setEndPoints(new RegisterControllerRecord.ControllerEndpointCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerEndpoint().
                             setName("CONTROLLER").
                             setHost("localhost").
                             setPort(8001).
                             setSecurityProtocol(SecurityProtocol.PLAINTEXT.id)).iterator())).
                 setFeatures(new RegisterControllerRecord.ControllerFeatureCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerFeature().
                             setName(MetadataVersion.FEATURE_NAME).
                             setMinSupportedVersion(MetadataVersion.MINIMUM_VERSION.featureLevel()).
@@ -1178,14 +1175,14 @@ public class QuorumControllerTest {
                 setControllerId(2).
                 setIncarnationId(Uuid.fromString("AAAAAAA04IIAAAAAAAAAAg")).
                 setEndPoints(new RegisterControllerRecord.ControllerEndpointCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerEndpoint().
                             setName("CONTROLLER").
                             setHost("localhost").
                             setPort(8002).
                             setSecurityProtocol(SecurityProtocol.PLAINTEXT.id)).iterator())).
                 setFeatures(new RegisterControllerRecord.ControllerFeatureCollection(
-                    singletonList(
+                    List.of(
                         new RegisterControllerRecord.ControllerFeature().
                             setName(MetadataVersion.FEATURE_NAME).
                             setMinSupportedVersion(MetadataVersion.MINIMUM_VERSION.featureLevel()).
@@ -1195,7 +1192,7 @@ public class QuorumControllerTest {
                 setBrokerId(0).setBrokerEpoch(brokerEpochs.get(0)).
                 setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwB0")).
                 setEndPoints(new BrokerEndpointCollection(
-                    singletonList(new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
+                    List.of(new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
                         setPort(9092).setSecurityProtocol((short) 0)).iterator())).
                 setFeatures(registrationFeatures(MetadataVersion.MINIMUM_VERSION, MetadataVersion.IBP_3_7_IV0)).
                 setRack(null).
@@ -1203,7 +1200,7 @@ public class QuorumControllerTest {
             new ApiMessageAndVersion(new RegisterBrokerRecord().
                 setBrokerId(1).setBrokerEpoch(brokerEpochs.get(1)).
                 setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwB1")).
-                setEndPoints(new BrokerEndpointCollection(singletonList(
+                setEndPoints(new BrokerEndpointCollection(List.of(
                     new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
                         setPort(9093).setSecurityProtocol((short) 0)).iterator())).
                 setFeatures(registrationFeatures(MetadataVersion.MINIMUM_VERSION, MetadataVersion.IBP_3_7_IV0)).
@@ -1213,7 +1210,7 @@ public class QuorumControllerTest {
                 setBrokerId(2).setBrokerEpoch(brokerEpochs.get(2)).
                 setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwB2")).
                 setEndPoints(new BrokerEndpointCollection(
-                    singletonList(new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
+                    List.of(new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
                         setPort(9094).setSecurityProtocol((short) 0)).iterator())).
                 setFeatures(registrationFeatures(MetadataVersion.MINIMUM_VERSION, MetadataVersion.IBP_3_7_IV0)).
                 setRack(null).
@@ -1221,7 +1218,7 @@ public class QuorumControllerTest {
             new ApiMessageAndVersion(new RegisterBrokerRecord().
                 setBrokerId(3).setBrokerEpoch(brokerEpochs.get(3)).
                 setIncarnationId(Uuid.fromString("kxAT73dKQsitIedpiPtwB3")).
-                setEndPoints(new BrokerEndpointCollection(singletonList(
+                setEndPoints(new BrokerEndpointCollection(List.of(
                     new BrokerEndpoint().setName("PLAINTEXT").setHost("localhost").
                         setPort(9095).setSecurityProtocol((short) 0)).iterator())).
                 setFeatures(registrationFeatures(MetadataVersion.MINIMUM_VERSION, MetadataVersion.IBP_3_7_IV0)).
@@ -1242,14 +1239,14 @@ public class QuorumControllerTest {
             new ApiMessageAndVersion(new TopicRecord().
                 setName("foo").setTopicId(fooId), (short) 0),
             new ApiMessageAndVersion(new PartitionRecord().setPartitionId(0).
-                setTopicId(fooId).setReplicas(Arrays.asList(0, 1, 2)).
-                setIsr(Arrays.asList(0, 1, 2)).setRemovingReplicas(Collections.emptyList()).
-                setAddingReplicas(Collections.emptyList()).setLeader(0).setLeaderEpoch(0).
+                setTopicId(fooId).setReplicas(List.of(0, 1, 2)).
+                setIsr(List.of(0, 1, 2)).setRemovingReplicas(List.of()).
+                setAddingReplicas(List.of()).setLeader(0).setLeaderEpoch(0).
                 setPartitionEpoch(0), (short) 0),
             new ApiMessageAndVersion(new PartitionRecord().setPartitionId(1).
-                setTopicId(fooId).setReplicas(Arrays.asList(1, 2, 0)).
-                setIsr(Arrays.asList(1, 2, 0)).setRemovingReplicas(Collections.emptyList()).
-                setAddingReplicas(Collections.emptyList()).setLeader(1).setLeaderEpoch(0).
+                setTopicId(fooId).setReplicas(List.of(1, 2, 0)).
+                setIsr(List.of(1, 2, 0)).setRemovingReplicas(List.of()).
+                setAddingReplicas(List.of()).setLeader(1).setLeaderEpoch(0).
                 setPartitionEpoch(0), (short) 0),
             new ApiMessageAndVersion(new ProducerIdsRecord().
                 setBrokerId(0).
@@ -1275,17 +1272,17 @@ public class QuorumControllerTest {
                 new RequestHeaderData(), KafkaPrincipal.ANONYMOUS, OptionalLong.of(now));
             CompletableFuture<CreateTopicsResponseData> createFuture =
                 controller.createTopics(context0, new CreateTopicsRequestData().setTimeoutMs(0).
-                    setTopics(new CreatableTopicCollection(Collections.singleton(
+                    setTopics(new CreatableTopicCollection(Set.of(
                         new CreatableTopic().setName("foo")).iterator())),
-                    Collections.emptySet());
+                    Set.of());
             CompletableFuture<Map<Uuid, ApiError>> deleteFuture =
-                controller.deleteTopics(context0, Collections.singletonList(Uuid.ZERO_UUID));
+                controller.deleteTopics(context0, List.of(Uuid.ZERO_UUID));
             CompletableFuture<Map<String, ResultOrError<Uuid>>> findTopicIdsFuture =
-                controller.findTopicIds(context0, Collections.singletonList("foo"));
+                controller.findTopicIds(context0, List.of("foo"));
             CompletableFuture<Map<Uuid, ResultOrError<String>>> findTopicNamesFuture =
-                controller.findTopicNames(context0, Collections.singletonList(Uuid.ZERO_UUID));
+                controller.findTopicNames(context0, List.of(Uuid.ZERO_UUID));
             CompletableFuture<List<CreatePartitionsTopicResult>> createPartitionsFuture =
-                controller.createPartitions(context0, Collections.singletonList(
+                controller.createPartitions(context0, List.of(
                     new CreatePartitionsTopic()), false);
             CompletableFuture<ElectLeadersResponseData> electLeadersFuture =
                 controller.electLeaders(context0, new ElectLeadersRequestData().setTimeoutMs(0).
@@ -1293,7 +1290,7 @@ public class QuorumControllerTest {
             CompletableFuture<AlterPartitionReassignmentsResponseData> alterReassignmentsFuture =
                 controller.alterPartitionReassignments(context0,
                     new AlterPartitionReassignmentsRequestData().setTimeoutMs(0).
-                        setTopics(Collections.singletonList(new ReassignableTopic())));
+                        setTopics(List.of(new ReassignableTopic())));
             CompletableFuture<ListPartitionReassignmentsResponseData> listReassignmentsFuture =
                 controller.listPartitionReassignments(context0,
                     new ListPartitionReassignmentsRequestData().setTopics(null).setTimeoutMs(0));
@@ -1334,15 +1331,15 @@ public class QuorumControllerTest {
             CountDownLatch countDownLatch = pause(controller);
             CompletableFuture<CreateTopicsResponseData> createFuture =
                 controller.createTopics(ANONYMOUS_CONTEXT, new CreateTopicsRequestData().
-                    setTimeoutMs(120000), Collections.emptySet());
+                    setTimeoutMs(120000), Set.of());
             CompletableFuture<Map<Uuid, ApiError>> deleteFuture =
-                controller.deleteTopics(ANONYMOUS_CONTEXT, Collections.emptyList());
+                controller.deleteTopics(ANONYMOUS_CONTEXT, List.of());
             CompletableFuture<Map<String, ResultOrError<Uuid>>> findTopicIdsFuture =
-                controller.findTopicIds(ANONYMOUS_CONTEXT, Collections.emptyList());
+                controller.findTopicIds(ANONYMOUS_CONTEXT, List.of());
             CompletableFuture<Map<Uuid, ResultOrError<String>>> findTopicNamesFuture =
-                controller.findTopicNames(ANONYMOUS_CONTEXT, Collections.emptyList());
+                controller.findTopicNames(ANONYMOUS_CONTEXT, List.of());
             CompletableFuture<List<CreatePartitionsTopicResult>> createPartitionsFuture =
-                controller.createPartitions(ANONYMOUS_CONTEXT, Collections.emptyList(), false);
+                controller.createPartitions(ANONYMOUS_CONTEXT, List.of(), false);
             CompletableFuture<ElectLeadersResponseData> electLeadersFuture =
                 controller.electLeaders(ANONYMOUS_CONTEXT, new ElectLeadersRequestData());
             CompletableFuture<AlterPartitionReassignmentsResponseData> alterReassignmentsFuture =
@@ -1372,11 +1369,11 @@ public class QuorumControllerTest {
             QuorumController active = controlEnv.activeController();
             registerBrokersAndUnfence(active, 5);
             active.createTopics(ANONYMOUS_CONTEXT, new CreateTopicsRequestData().
-                setTopics(new CreatableTopicCollection(Collections.singleton(
+                setTopics(new CreatableTopicCollection(Set.of(
                     new CreatableTopic().setName("foo").
                         setReplicationFactor((short) 3).
                         setNumPartitions(1)).iterator())),
-                Collections.singleton("foo")).get();
+                Set.of("foo")).get();
             ConfigResourceExistenceChecker checker =
                 active.new ConfigResourceExistenceChecker();
             // A ConfigResource with type=BROKER and name=(empty string) represents
@@ -1416,7 +1413,7 @@ public class QuorumControllerTest {
         ) {
             QuorumController active = controlEnv.activeController();
             CompletableFuture<Void> future = active.appendWriteEvent("errorEvent",
-                    OptionalLong.empty(), () -> ControllerResult.of(Collections.singletonList(new ApiMessageAndVersion(
+                    OptionalLong.empty(), () -> ControllerResult.of(List.of(new ApiMessageAndVersion(
                             new ConfigRecord().
                                     setName(null).
                                     setResourceName(null).
@@ -1431,7 +1428,7 @@ public class QuorumControllerTest {
 
     @Test
     public void testFatalMetadataErrorDuringSnapshotLoading() throws Exception {
-        InitialSnapshot invalidSnapshot = new InitialSnapshot(singletonList(
+        InitialSnapshot invalidSnapshot = new InitialSnapshot(List.of(
             new ApiMessageAndVersion(new PartitionRecord(), (short) 0))
         );
 
@@ -1455,7 +1452,7 @@ public class QuorumControllerTest {
     @Test
     public void testFatalMetadataErrorDuringLogLoading() throws Exception {
         try (LocalLogManagerTestEnv logEnv = new LocalLogManagerTestEnv.Builder(3).build()) {
-            logEnv.appendInitialRecords(singletonList(
+            logEnv.appendInitialRecords(List.of(
                     new ApiMessageAndVersion(new PartitionRecord(), (short) 0)));
 
             try (QuorumControllerTestEnv controlEnv = new QuorumControllerTestEnv.Builder(logEnv).build()) {
@@ -1496,7 +1493,7 @@ public class QuorumControllerTest {
     }
 
     private static final BootstrapMetadata COMPLEX_BOOTSTRAP = BootstrapMetadata.fromRecords(
-            Arrays.asList(
+            List.of(
                 new ApiMessageAndVersion(new FeatureLevelRecord().
                         setName(MetadataVersion.FEATURE_NAME).
                         setFeatureLevel(MetadataVersion.MINIMUM_VERSION.featureLevel()),
@@ -1532,9 +1529,9 @@ public class QuorumControllerTest {
             TestUtils.waitForCondition(() -> {
                 ConfigResource defaultBrokerResource = new ConfigResource(BROKER, "");
 
-                Map<ConfigResource, Collection<String>> configs = Collections.singletonMap(
+                Map<ConfigResource, Collection<String>> configs = Map.of(
                     defaultBrokerResource,
-                    Collections.emptyList()
+                    List.of()
                 );
 
                 Map<ConfigResource, ResultOrError<Map<String, String>>> results =
@@ -1542,7 +1539,7 @@ public class QuorumControllerTest {
 
                 ResultOrError<Map<String, String>> resultOrError = results.get(defaultBrokerResource);
                 return resultOrError.isResult() &&
-                    Collections.singletonMap("foo", "bar").equals(resultOrError.result());
+                    Map.of("foo", "bar").equals(resultOrError.result());
             }, "Failed to see expected config change from bootstrap metadata");
 
             testToImages(logEnv.allRecords());
@@ -1573,7 +1570,7 @@ public class QuorumControllerTest {
     public void testAppendRecords() {
         TestAppender appender = new TestAppender();
         assertEquals(5, QuorumController.appendRecords(log,
-            ControllerResult.of(Arrays.asList(rec(0), rec(1), rec(2), rec(3), rec(4)), null),
+            ControllerResult.of(List.of(rec(0), rec(1), rec(2), rec(3), rec(4)), null),
             2,
             appender));
     }
@@ -1584,7 +1581,7 @@ public class QuorumControllerTest {
         assertEquals("Attempted to atomically commit 5 records, but maxRecordsPerBatch is 2",
             assertThrows(IllegalStateException.class, () ->
                 QuorumController.appendRecords(log,
-                        ControllerResult.atomicOf(Arrays.asList(rec(0), rec(1), rec(2), rec(3), rec(4)), null),
+                        ControllerResult.atomicOf(List.of(rec(0), rec(1), rec(2), rec(3), rec(4)), null),
                         2,
                         appender)).getMessage());
     }
@@ -1654,7 +1651,7 @@ public class QuorumControllerTest {
      */
     @SuppressWarnings("unchecked")
     private static void testToImages(List<ApiMessageAndVersion> fromRecords) {
-        List<ImageDeltaPair<?, ?>> testMatrix = Arrays.asList(
+        List<ImageDeltaPair<?, ?>> testMatrix = List.of(
             new ImageDeltaPair<>(() -> AclsImage.EMPTY, AclsDelta::new),
             new ImageDeltaPair<>(() -> ClientQuotasImage.EMPTY, ClientQuotasDelta::new),
             new ImageDeltaPair<>(() -> ClusterImage.EMPTY, ClusterDelta::new),
@@ -1679,7 +1676,7 @@ public class QuorumControllerTest {
         OffsetControlManager offsetControlManager = new OffsetControlManager.Builder().build();
         offsetControlManager.replay(new BeginTransactionRecord(), 10);
         offsetControlManager.handleCommitBatch(Batch.data(20, 1, 1L, 0,
-            Collections.singletonList(new ApiMessageAndVersion(new BeginTransactionRecord(), (short) 0))));
+            List.of(new ApiMessageAndVersion(new BeginTransactionRecord(), (short) 0))));
 
         ControllerResult<Void> result = ActivationRecordsGenerator.generate(
             logMsg -> { },
@@ -1701,7 +1698,7 @@ public class QuorumControllerTest {
         OffsetControlManager offsetControlManager = new OffsetControlManager.Builder().build();
         offsetControlManager.replay(new BeginTransactionRecord(), 10);
         offsetControlManager.handleCommitBatch(Batch.data(20, 1, 1L, 0,
-            Collections.singletonList(new ApiMessageAndVersion(new BeginTransactionRecord(), (short) 0))));
+            List.of(new ApiMessageAndVersion(new BeginTransactionRecord(), (short) 0))));
 
         assertThrows(RuntimeException.class, () ->
             ActivationRecordsGenerator.generate(
